Use OpenAI API and refactor

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,4 @@
 TELEGRAM_PROD_ACCESS_KEY = ''
 TELEGRAM_SANDBOX_ACCESS_KEY = ''
-RAPID_API_KEY = ''
-RAPID_HOST = ''
+OPENAI_API_KEY = ''
 PICOVOICE_ACCESS_KEY = ''
