--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "node-fetch": "^3.3.1",
     "node-json-db": "^2.1.5",
+    "openai": "^3.2.1",
     "telegraf": "^4.12.2"
   }
 }
